Attempt to fix tiles on mobile 1

--- a/src/Styles/Utilities.css
+++ b/src/Styles/Utilities.css
@@ -95,3 +95,7 @@
 .center-font {
     text-align: center;
 }
+
+.mobile-center {
+    margin: auto;
+}
